--- a/style.css
+++ b/style.css
@@ -20,9 +20,12 @@ header h1{
      display: flex;
      flex-direction: row;
    }
-   header section figure img{
-     width:150px;
+   header section{
+     justify-content: center;
    }
+       header section figure img{
+         width:150px;
+         }
 form{
   text-align:center;
 }
